# FLaME

./: .env.sample  .gitignore  .gitmodules  .python-version  CLAUDE.md  COMMANDS.md  LOGBOOK.md  README.md  TESTING.md  TODO.md  TODOs.md  conda_env_size.sh  config.yaml  download_llama.py  env-gpu.yml  env.yaml  environment.txt  environment.yaml  environment.yml  gpt.py  gpt_finqa.py  inference.py  llama_convfinqa.py  llama_finqa.py  main.py  model_info.csv  numclaim_train_llama_2.csv  oldrequirements.txt  palm.py  palm_finqa.py  pyproject.toml  pytest-ci.ini  pytest.ini  requirements-dev.txt  requirements.txt  runs.sh  setup.py  superflue.py  task_validation_tracker.md  test.html  (+1 more)
.claude/: sample_size_feature.md  settings.local.json
.dvc/: config
__scratch__/: COMMANDS.md  metrics.ipynb  superflue_budget_estimates.ipynb
agent/: evaluation_testing_guide.md  olmes chato3 research.md
claude/: cicd_testing_strategy.md  convfinqa_async_optimization_plan.md  inference_testing_guide.md  settings.local.json  task_audit_plan.md  task_review_plan.md  test_isolation_solution.md  test_output_fix_summary.md  test_status_report.md
code/: Document_splitter.py  GPT_script.py  LangChain_splitter.py  PaLM_script.py  T5_script.py  evaluate_metrics.py  huggify_ect_sumv1.py  huggify_ect_sumv2.py  huggify_numclaim.py  llama_2.py
configs/: banking77.yaml  bizbench.yaml  causal_classification.yaml  causal_detection.yaml  ci.yaml  config.yaml  convfinqa.yaml  default.yaml  development.yaml  econlogicqa.yaml  ectsum.yaml  edtsum.yaml  finbench.yaml  finentity.yaml  finer.yaml  finqa.yaml  finred.yaml  fiqa_task1.yaml  fiqa_task2.yaml  fnxl.yaml  fomc.yaml  fomc_config.yaml  fpb.yaml  fpb_config.yaml  headlines.yaml  mmlu.yaml  numclaim.yaml  ollama.yaml  refind.yaml  subjectiveqa.yaml  tatqa.yaml
data/: Huggify Dataset.py  ectsum_script.py  finqa.py  huggify_data.ipynb  numclaim_script.py  word_count.ipynb
docs/: cleanup_summary.md  (+3 more)
src/: model.py  (+5 more)
(+2071 files in other folders)
